[workspace]
resolver = "2"
members = ["app", "cli", "integration_tests", "lib", "rpc-api"]

[workspace.package]
authors = [
    "Ash Manning <ash@layertwolabs.com>",
    "Nikita Chashchinskii <nikita.chashchinskii@gmail.com>",
]
edition = "2024"
license-file = "LICENSE.txt"
publish = false
version = "0.12.6"

[workspace.dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
bitcoin = "0.32.5"
clap = { version = "4.5.4" }
futures = { version = "0.3.30", default-features = false }
http = "1.2.0"
jsonrpsee = { version = "0.24.7", features = ["tracing"] }
parking_lot = "0.12.1"
prost = "0.13.3"
rustreexo = "0.4.0"
serde = "1.0.179"
serde_json = "1.0.113"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
tiny-bip39 = "2.0.0"
tokio = { version = "1.29.1", default-features = false, features = ["signal"] }
tokio-util = "0.7.10"
tonic = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "5.2.0", default-features = false }
uuid = "1.13.1"

[workspace.dependencies.bip300301_enforcer_lib]
default-features = false
git = "https://github.com/LayerTwo-Labs/bip300301_enforcer"
rev = "b0ad8331712f35497b238a69ac93dcf8059867dc"

[workspace.dependencies.bip300301_enforcer_integration_tests]
default-features = false
git = "https://github.com/LayerTwo-Labs/bip300301_enforcer"
rev = "b0ad8331712f35497b238a69ac93dcf8059867dc"

[workspace.dependencies.l2l-openapi]
git = "https://github.com/Ash-L2L/l2l-openapi"
rev = "38c42ee637d083f1cdc807b546f6930b880dcad9"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
print_stderr = "deny"
print_stdout = "deny"
significant_drop_in_scrutinee = "deny"
wildcard_imports = "deny"

[workspace.lints.rust]
let_underscore_drop = "deny"

# temp-dir does not leak correctly after clone
# https://gitlab.com/leonhard-llc/ops/-/issues/17
[patch.crates-io.temp-dir]
git = "https://gitlab.com/A-Manning/leonhard-llc-ops.git"
branch = "temp-dir-leak"

# Have to use a patch here. Depending directly on the fork breaks macros.
[patch.crates-io.tracing-appender]
git = "https://github.com/torkelrogstad/tokio-tracing.git"
branch = "log-rotation-size"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
lto = "fat"
codegen-units = 1
panic = "abort"