[workspace]
resolver = "2"
members = ["app", "cli", "integration_tests", "lib", "rpc-api"]

[workspace.package]
authors = [
    "Ash Manning <ash@layertwolabs.com>",
    "Nikita Chashchinskii <nikita.chashchinskii@gmail.com>",
]
edition = "2024"
license-file = "LICENSE.txt"
publish = false
version = "0.14.1"

[workspace.dependencies]
anyhow = "1.0.72"
async-lock = "3.4.0"
bincode = "1.3.3"
bitcoin = "0.32.5"
blake3 = "1.4.1"
borsh = "1.3.1"
byteorder = "1.4.3"
bytes = "1.4.0"
clap = "4.5.4"
dirs = "5.0.1"
dotenvy = "0.15.7"
educe = { version = "0.6.0", default-features = false }
eframe = "0.31.0"
error-fatality = "0.1.2"
fallible-iterator = "0.3.0"
fips205 = "0.4.1"
futures = { version = "0.3.30", default-features = false }
governor = { version = "0.8.1", default-features = false }
hashlink = "0.10.0"
heed = "0.21.0"
hex = "0.4.3"
http = "1.2.0"
human-size = "0.4.3"
hybrid-array = "0.4.5"
include_path = "0.1.1"
jsonrpsee = { version = "0.25.1", features = ["tracing"] }
libtest-mimic = "0.8.1"
merkle-cbt = "0.3.2"
mimalloc = "0.1.48"
nonempty = "0.11.0"
parking_lot = "0.12.1"
poll-promise = "0.3.0"
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
protox = "0.9.0"
quinn = "0.11.6"
rand_core = "0.6.4"
rand = "0.8.5"
rayon = "1.7.0"
rcgen = "0.13.2"
reserve-port = "2.0.1"
rustls = { version = "0.23.21", default-features = false }
semver = "1.0.25"
serde = "1.0.179"
serde_json = "1.0.113"
serde_with = "3.4.0"
shlex = "1.3.0"
smallvec = "1.13.2"
sneed = "0.0.11"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.11"
tiny-bip39 = "2.0.0"
tokio = { version = "1.50.0", default-features = false }
tokio-stream = "0.1.15"
tokio-util = "0.7.18"
tonic = "0.14.2"
tonic-health = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
# needs to line up with jsonrpsee tower version...
tower = "0.5.2"
tower-http = "0.6.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.8"
tracing-subscriber = "0.3.20"
transitive = "1.0.1"
url = "2.5.4"
utoipa = { version = "5.2.0", default-features = false }
uuid = "1.13.1"

[workspace.dependencies.bip300301_enforcer_lib]
default-features = false
git = "https://github.com/LayerTwo-Labs/bip300301_enforcer"
rev = "1100b6085d9ed64eeaf1b57b3c44609626bd4b23"

[workspace.dependencies.bip300301_enforcer_integration_tests]
default-features = false
git = "https://github.com/LayerTwo-Labs/bip300301_enforcer"
rev = "1100b6085d9ed64eeaf1b57b3c44609626bd4b23"

[workspace.dependencies.l2l-openapi]
git = "https://github.com/Ash-L2L/l2l-openapi"
rev = "5f8fb2237c95725731d5fb10542098303d82e215"

[workspace.dependencies.rustreexo]
git = "https://github.com/mit-dci/rustreexo"
rev = "6da503b598470f6e87aa9d769b94df64df7ff3ae"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
print_stderr = "deny"
print_stdout = "deny"
significant_drop_in_scrutinee = "deny"
wildcard_imports = "deny"

[workspace.lints.rust]
let_underscore_drop = "deny"

# temp-dir does not leak correctly after clone
# https://gitlab.com/leonhard-llc/ops/-/issues/17
[patch.crates-io.temp-dir]
git = "https://gitlab.com/A-Manning/leonhard-llc-ops.git"
branch = "temp-dir-leak"

# Have to use a patch here. Depending directly on the fork breaks macros.
[patch.crates-io.tracing-appender]
git = "https://github.com/torkelrogstad/tokio-tracing.git"
branch = "log-rotation-size"

[profile.dev.package.fips205]
opt-level = 3

[profile.release]
# lto = "fat"
