[package]
name = "thunder_app"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
dirs = "5.0.1"
eframe = "0.30.0"
futures = { workspace = true }
http = { workspace = true }
human-size = "0.4.3"
include_path = "0.1.1"
jsonrpsee = { workspace = true, features = ["server"] }
parking_lot = { workspace = true }
poll-promise = { version = "0.3.0", features = ["tokio"] }
rustreexo = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shlex = "1.3.0"
strum = { workspace = true }
thiserror = { workspace = true }
thunder = { path = "../lib" }
thunder_app_cli = { path = "../cli" }
thunder_app_rpc_api = { path = "../rpc-api" }
tiny-bip39 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true }
tonic-health = "0.12.3"
# needs to line up with jsonrpsee tower version...
tower = "0.4.13"
tower-http = { version = "0.6.2", features = ["request-id", "trace"] }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = "2.5.4"
utoipa = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "thunder_app"
path = "main.rs"
