[package]
name = "photon_app"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
eframe = { workspace = true }
fallible-iterator = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
human-size = { workspace = true }
include_path = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
mimalloc = { workspace = true, features = ["v3"] }
parking_lot = { workspace = true }
poll-promise = { workspace = true, features = ["tokio"] }
rustreexo = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shlex = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
photon = { path = "../lib", features = ["clap"] }
photon_app_cli = { path = "../cli" }
photon_app_rpc_api = { path = "../rpc-api" }
tiny-bip39 = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true }
tonic-health = { workspace = true }
# needs to line up with jsonrpsee tower version...
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "request-id", "trace"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread", "signal"]

[lints]
workspace = true

[[bin]]
name = "photon_app"
path = "main.rs"
