[package]
name = "photon_app_cli"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
http = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client"] }
serde_json = { workspace = true }
photon = { path = "../lib" }
photon_app_rpc_api = { path = "../rpc-api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true

[lib]
name = "photon_app_cli_lib"
path = "lib.rs"

[[bin]]
name = "photon_app_cli"
path = "main.rs"
