[package]
name = "photon"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[build-dependencies]
prost = { workspace = true }
prost-build ={ workspace = true }
protox = { workspace = true }
tonic-prost-build = { workspace = true }

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-lock = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
blake3 = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
byteorder = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
educe = { workspace = true, features = ["Clone", "Debug"] }
error-fatality = { workspace = true }
fallible-iterator = { workspace = true }
fips205 = { workspace = true, features = ["slh_dsa_shake_256s"] }
futures = { workspace = true, features = ["alloc"] }
governor = { workspace = true, features = ["quanta", "std"] }
hashlink = { workspace = true, features = ["serde_impl"] }
heed = { workspace = true }
hex = { workspace = true, features = ["serde"] }
hybrid-array = { workspace = true, features = ["serde"] }
jsonrpsee = { workspace = true }
merkle-cbt = { workspace = true }
nonempty = { workspace = true, features = ["serialize"] }
parking_lot = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
quinn = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, default-features = false, features = ["ring"] }
rustreexo = { workspace = true, features = ["with-serde"] }
smallvec = { workspace = true, features = ["write"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
sneed = { workspace = true, features = ["observe"] }
strum = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
transitive = { workspace = true }
utoipa = { workspace = true, features = ["macros", "non_strict_integers"] }

[features]
clap = ["dep:clap"]

[lints]
workspace = true

[lib]
name = "photon"
path = "lib.rs"
