[package]
name = "thunder"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[build-dependencies]
prost = { workspace = true }
prost-build = { workspace = true }
protox = { workspace = true }
tonic-prost-build = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-lock = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true }
borsh = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
ed25519-dalek = { workspace = true }
ed25519-dalek-bip32 = { workspace = true }
educe = { workspace = true, features = ["Clone", "Debug"] }
error-fatality = { workspace = true }
fallible-iterator = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
governor = { workspace = true, features = ["quanta", "std"] }
hashlink = { workspace = true, features = ["serde_impl"] }
heed = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
nonempty = { workspace = true, features = ["serialize"] }
parking_lot = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sneed = { workspace = true, features = ["observe"] }
thiserror = { workspace = true }
thunder_types = { path = "../types", features = ["heed"] }
tiny-bip39 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
transitive = { workspace = true }

[dev-dependencies]
hashlink = { workspace = true }
temp-dir = { workspace = true }

[features]
clap = ["thunder_types/clap"]

[lints]
workspace = true

[lib]
name = "thunder"
path = "lib.rs"
