[package]
name = "thunder_app_rpc_api"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
jsonrpsee = { workspace = true, features = ["client", "macros", "server"] }
l2l-openapi = { workspace = true }
thunder = { path = "../lib" }
serde_json = { workspace = true }
utoipa = { workspace = true }
serde.workspace = true

[lints]
workspace = true

[lib]
name = "thunder_app_rpc_api"
path = "lib.rs"
