[package]
name = "rustreexo"
version = "0.4.0"
authors = ["Calvin Kim <calvin@kcalvinalvin.info>"]
edition = "2018"
description = "A Rust implementation of Utreexo"
license = "MIT"
repository = "https://github.com/mit-dci/rustreexo"
readme = "README.md"
homepage = "https://github.com/mit-dci/rustreexo"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitcoin_hashes = "0.14"
blake3 = { version = "1.8.2", features = ["rayon"] }
crossbeam = "0.8"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = "1.3"
smallvec = "1.13"
num_cpus = "1.17.0"
hashbrown = "0.15.4"
bitvec = "1.0.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"

[features]
with-serde = ["serde"]
default = []

[[example]]
name = "simple-stump-update"

[[example]]
name = "proof-update"

[[example]]
name = "custom-hash-type"
